Switching over to use Chaplin CollectionView

--- a/web/src/main/webapp/static/js/templates/designer.hbs
+++ b/web/src/main/webapp/static/js/templates/designer.hbs
@@ -1,5 +1,7 @@
 <div id="left-frame" class="span2">
-	<div class="process-list well sidebar-nav"></div>
+	<div class="well sidebar-nav">
+		
+	</div>
 </div>
 
 <div id="main-frame" class="span10"></div>
