--- a/web/src/main/webapp/static/js/templates/process-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/process-detail.hbs
@@ -23,8 +23,8 @@
 		<div class="control-group">
 			<label>Description <span class="muted">(optional)</span></label>
 			<div class="controls">
-				<textarea class="new-process-summary span8"
-					name="new_process_summary"
+				<textarea class="process-summary span8"
+					name="process_summary"
 					placeholder="Provide some more details about how the process works"
 					rows="4"></textarea>
 			</div>
@@ -32,13 +32,13 @@
 		<div class="control-group">
 			<label>Participants <span class="muted">(optional)</span></label>
 			<div class="controls">
-				<textarea class="new-process-summary span8"
-					name="new_process_summary"
+				<textarea class="process-participants span8"
+					name="process_participants"
 					placeholder="What people or groups have to take action?"></textarea>
 			</div>
 		</div>
 		<div>
-			<a href="#update-process" class="btn btn-primary">Save</a>
+			<a href="#" class="btn btn-primary">Save</a>
 		</div>
 	</fieldset>
 </form>
