--- a/web/src/main/webapp/static/js/templates/designer.hbs
+++ b/web/src/main/webapp/static/js/templates/designer.hbs
@@ -1,6 +1,7 @@
 <div id="left-frame" class="span2">
 	<div class="well sidebar-nav">
-		
+		<div class="sidebar-header"></div>
+		<div class="sidebar-content"></div>		
 	</div>
 </div>
 
