--- a/web/src/main/webapp/static/js/templates/process-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/process-detail.hbs
@@ -1,44 +1,85 @@
-<p class="lead">Describe a process</p>
-<p class="muted">To get started, describe what your process is. Say as little or as much as you want.</p>
-<form id="process-basic-information">
-	<fieldset>
-		<div class="control-group">
-			<label>Formal name</label>
-			<div class="controls">
-				<input class="process-formal-name span6" type="text"
-					name="process_formal_name"
-					placeholder="How would you refer to it officially?" required>
-				<span class="help-inline hide">Required</span>
+<div class="accordion" id="process-detail-accordian">
+	<form id="process-detail-form">
+		<div class="accordion-group editing">
+			<div class="accordion-heading">
+				<div class="accordion-toggle">
+					<a class="section-toggle-switch" data-toggle="collapse" data-parent="#process-detail-accordian"
+						data-target="#process-basic-information">
+						<i class="section-open-indicator icon-chevron-right"></i>&nbsp;<span class="lead">Basic information</span>
+					</a>
+					<span class="pull-right"><button class="edit-button btn" type="button">Edit</button></span>
+				</div>		
+			</div>
+			<div id="process-basic-information" class="accordion-body collapse">
+				<div class="accordion-inner">
+					<div class="alert alert-info tips-and-tricks">
+						<button type="button" class="close" data-dismiss="alert">&times;</button>
+						To get started, describe what your process is. Say as little or as much as you want.	
+					</div>
+					<fieldset>
+						<div class="control-group">
+							<label>Name</label>
+							<div class="controls">
+								<div class="viewable process-short-name-readonly muted"></div>
+								<input class="editable process-short-name" type="text"
+									name="shortName" maxlength="25" size="25"
+									placeholder="What do you call it for short?" required> <span
+									class="help-inline hide">Required</span>
+							</div>
+						</div>
+						<div class="control-group">
+							<label>Formal name <span class="text-info">(optional)</span></label>
+							<div class="controls">
+								<div class="viewable process-short-name-readonly muted"></div>
+								<input class="editable process-formal-name span6" type="text"
+									name="formalName" maxlength="80"
+									placeholder="How would you refer to it officially?">
+								<span class="help-inline hide">Required</span>
+							</div>
+						</div>
+						<div class="control-group">
+							<label>Description <span class="text-info">(optional)</span></label>
+							<div class="controls">
+								<div class="viewable process-short-name-readonly muted"></div>
+								<textarea class="editable process-summary span8"
+									name="summary"
+									placeholder="Provide some more details about how the process works"
+									rows="4"></textarea>
+							</div>
+						</div>
+						<div class="control-group">
+							<label>Participants <span class="text-info">(optional)</span></label>
+							<div class="controls">
+								<div class="viewable process-short-name-readonly muted"></div>
+								<textarea class="editable process-participants span8"
+									name="participants"
+									placeholder="What people or groups have to take action?"></textarea>
+							</div>
+						</div>
+<!-- 						<div class="span4 pull-right"> -->
+<!-- 							<a href="#" class="btn btn-primary btn-medium">Save &raquo;</a> -->
+<!-- 						</div> -->
+					</fieldset>
+				</div>
 			</div>
 		</div>
-		<div class="control-group">
-			<label>Shorthand name</label>
-			<div class="controls">
-				<input class="process-short-name span3" type="text"
-					name="process_short_name"
-					placeholder="What do you call it for short?" required> <span
-					class="help-inline hide">Required</span>
+		<div class="accordion-group">
+			<div class="accordion-heading">
+				<div class="accordion-toggle">
+					<a class="section-toggle-switch" data-toggle="collapse" data-parent="#process-detail-accordian"
+						data-target="#process-interactions">
+						<i class="section-open-indicator icon-chevron-right"></i>&nbsp;<span class="lead">User interactions</span>
+					</a>
+					<span class="pull-right"><button class="edit-button btn" type="button">Edit</button></span>
+				</div>
+			</div>
+			<div id="process-interactions" class="accordion-body collapse">
+				<div class="accordion-inner">Anim pariatur cliche...</div>
 			</div>
 		</div>
-		<div class="control-group">
-			<label>Description <span class="muted">(optional)</span></label>
-			<div class="controls">
-				<textarea class="process-summary span8"
-					name="process_summary"
-					placeholder="Provide some more details about how the process works"
-					rows="4"></textarea>
-			</div>
-		</div>
-		<div class="control-group">
-			<label>Participants <span class="muted">(optional)</span></label>
-			<div class="controls">
-				<textarea class="process-participants span8"
-					name="process_participants"
-					placeholder="What people or groups have to take action?"></textarea>
-			</div>
-		</div>
-		<div>
-			<a href="#" class="btn btn-primary">Save</a>
-		</div>
-	</fieldset>
-</form>
+	</form>
+</div>
+
+
+
+
