--- a/web/src/main/webapp/static/js/templates/sidebar.hbs
+++ b/web/src/main/webapp/static/js/templates/sidebar.hbs
@@ -1,1 +1,2 @@
-<div class="nav-header">MY PROCESSES</div>
+<div class="sidebar-header nav-header">MY PROCESSES</div>
+<div class="sidebar-content"></div>
