--- a/web/src/main/webapp/static/js/templates/designer.hbs
+++ b/web/src/main/webapp/static/js/templates/designer.hbs
@@ -1,8 +1,2 @@
-<div id="left-frame" class="span2">
-	<div class="well sidebar-nav">
-		<div class="sidebar-header"></div>
-		<div class="sidebar-content"></div>		
-	</div>
-</div>
-
+<div id="left-frame" class="span2"></div>
 <div id="main-frame" class="span10"></div>
