--- a/web/src/main/webapp/static/js/templates/intro.hbs
+++ b/web/src/main/webapp/static/js/templates/intro.hbs
@@ -1,1 +1,1 @@
-<a class="btn btn-primary btn-large start-button" href="#designer/start" type="button" role="button">Start</a>
+<a class="btn btn-primary btn-large start-button" href="#designer/edit" type="button" role="button">Start</a>
