--- a/web/src/main/webapp/static/js/templates/screen-item.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-item.hbs
@@ -1,10 +1,19 @@
-<fieldset>
-	<div class="control-group">
-		<label>Title</label>
-		<div class="controls">
-			<div class="viewable screen-title-readonly muted"></div>
-			<input class="editable screen-title" type="text" name="title" maxlength="45" size="45"
-				placeholder="" required> <span class="help-inline hide">Required</span>
-		</div>
-	</div>
-</fieldset>
+<div class="form-inline">
+	<ul class="inline">
+		<li class="span3">
+			<div class="control-group">
+				<label>Title</label>
+				<span class="input-large uneditable-input">Title</span>
+			</div>
+		</li>
+		<li class="span4">
+			<div class="control-group">
+				<label>Location</label>
+				<div class="input-append">
+  					<input class="span10" name="url" type="text" size="85" maxlength="200" placeholder="Cut-and-paste link here"></input>
+  					<a class="btn" href="#designer/configure/123" role="button" type="button">Configure</a>
+				</div>
+			</div>
+		</li>
+	</ul>
+</div>
