Working on screen designer

--- a/web/src/main/webapp/static/js/templates/screen-item.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-item.hbs
@@ -1,16 +1,16 @@
-<div class="form-inline">
+<div class="form-inline row-fluid">
 	<ul class="inline">
 		<li class="span3">
 			<div class="control-group">
 				<label>Title</label>
-				<span class="input-large uneditable-input">Title</span>
+				<input class="span12" type="text" size="20" maxlength="100" placeholder="Screen title"></input>
 			</div>
 		</li>
-		<li class="span4">
+		<li class="span6">
 			<div class="control-group">
 				<label>Location</label>
-				<div class="input-append">
-  					<input class="span10" name="url" type="text" size="85" maxlength="200" placeholder="Cut-and-paste link here"></input>
+				<div class="input-append span12">
+  					<input class="span10" name="url" type="text" size="65" maxlength="200" placeholder="Cut-and-paste link here"></input>
   					<a class="btn" href="#designer/configure/123" role="button" type="button">Configure</a>
 				</div>
 			</div>
