--- a/web/src/main/webapp/static/js/templates/field-configure.hbs
+++ b/web/src/main/webapp/static/js/templates/field-configure.hbs
@@ -1,1 +1,6 @@
-Test
+<form class="piecework-field-editor-form">
+	<div>
+		<label>Required</label>
+		<input type="checkbox" class="piecework-field-required"></input>
+	</div>
+</form>
