Improvements to screen designer

--- a/web/src/main/webapp/static/js/templates/screen-item.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-item.hbs
@@ -11,7 +11,7 @@
 				<label>Location</label>
 				<div class="input-append span12">
   					<input class="span10" name="url" type="text" size="65" maxlength="200" placeholder="Cut-and-paste link here"></input>
-  					<a class="btn" href="#designer/configure/123" role="button" type="button">Configure</a>
+  					<a class="btn" href="#designer/screen/456" role="button" type="button">Configure</a>
 				</div>
 			</div>
 		</li>
