--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -84,6 +84,94 @@
       	.editing .viewable {
       		display: none !important;
       	}
+      	
+      	.field-layout {
+			position: relative;
+			margin: 15px 0;
+			padding: 39px 19px 14px;
+			background-color: #fff;
+			border: 1px solid #ddd;
+			-webkit-border-radius: 4px;
+			-moz-border-radius: 4px;
+			border-radius: 4px;
+			height: 50px;
+			width: 130px;
+		}
+		
+		.field-layout:after {
+			content: "Field";
+			position: absolute;
+			top: -1px;
+			left: -1px;
+			padding: 3px 7px;
+			font-size: 12px;
+			font-weight: bold;
+			background-color: #f5f5f5;
+			border: 1px solid #ddd;
+			color: #9da0a4;
+			-webkit-border-radius: 4px 0 4px 0;
+			-moz-border-radius: 4px 0 4px 0;
+			border-radius: 4px 0 4px 0;
+		}
+		
+		.field-layout.selected {
+			/*border: 1px solid black;*/
+			outline-color: RoyalBlue;
+			outline-style: auto;
+			outline-width: 5px;
+		}
+		
+		.field-layout.selected:after {
+			/*border: 1px solid black;*/
+			background-color: #eee;
+			color: black;
+		}
+      	
+      	.navbar .breadcrumb {
+      		margin: 0px;
+      		padding: 10px 0px;
+      	}
+
+		.section-layout {
+			position: relative;
+			margin: 15px 0;
+			padding: 39px 19px 14px;
+			background-color: #fff;
+			border: 1px solid #ddd;
+			-webkit-border-radius: 4px;
+			-moz-border-radius: 4px;
+			border-radius: 4px;
+			height: 300px;
+			overflow-y: auto;
+		}
+		
+		.section-layout:after {
+			content: "Section";
+			position: absolute;
+			top: -1px;
+			left: -1px;
+			padding: 3px 7px;
+			font-size: 12px;
+			font-weight: bold;
+			background-color: #f5f5f5;
+			border: 1px solid #ddd;
+			color: #9da0a4;
+			-webkit-border-radius: 4px 0 4px 0;
+			-moz-border-radius: 4px 0 4px 0;
+			border-radius: 4px 0 4px 0;
+		}
+		
+		.section-layout.selected {
+			/*border: 1px solid black;*/
+			outline-color: RoyalBlue;
+			outline-style: auto;
+			outline-width: 5px;
+		}
+		
+		.section-layout.selected:after {
+			/*border: 1px solid black;*/
+			color: black;
+		}
 
       	.sidebar-nav {
         	padding: 9px 0;
