--- a/web/src/main/webapp/static/js/templates/sidebar.hbs
+++ b/web/src/main/webapp/static/js/templates/sidebar.hbs
@@ -1,2 +1,9 @@
-<div class="sidebar-header nav-header">MY PROCESSES</div>
+<div class="sidebar-header nav-header">
+	<div class="row-fluid">
+		<div class="pull-left">{{title}}</div>
+		<div class="pull-right">
+			<a class="btn btn-mini btn-link add-button pull-right" {{#if actions.add}} href="{{actions.add}}" {{/if}}><i class="icon-plus-sign"></i></a>
+		</div>
+	</div>
+</div>
 <div class="sidebar-content"></div>
