--- a/web/src/main/webapp/static/js/templates/screen-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-detail.hbs
@@ -17,12 +17,13 @@
 				</ul>
 			</div>
 			<div class="btn-group">
-				<button class="btn btn-danger accessible-btn remove-button" disabled><i class="icon-remove icon-white"></i> Delete</button> 
+				<button class="btn btn-danger accessible-btn remove-button" tabindex="112" disabled><i class="icon-remove icon-white"></i> Delete</button> 
 			</div>
 		</div>
 	</div>
 </div>
 
+<div class="alert-container"></div>
 <div class="screen-content">
 	
 </div>
@@ -33,7 +34,7 @@
     <h3 id="remove-dialog-label">Are you sure?</h3>
   </div>
   <div class="modal-body">
-    <p>Removing a field </p>
+    <p>To remove a section</p>
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">No</button>
