--- a/web/src/main/webapp/static/js/templates/field-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/field-detail.hbs
@@ -1,14 +1,25 @@
-<div>
-	<label>Required</label>
-	<input type="checkbox"></input>
-</div>
+
 <fieldset>
 	<div class="control-group">
-		<label class="control-label" for="inputEmail">Label</label>
+		<label for="field-label">Name</label>
 		<div class="controls">
-			<input type="text" id="inputEmail" placeholder="Email">
+			<input type="text" class="field-label" placeholder="">
 		</div>
 	</div>
-
+	<div class="control-group">
+		<label for="field-label">Type</label>
+		<div class="controls">
+			<select class="field-type">
+				<option value="text">Text</option>
+				<option value="checkbox">Checkbox</option>
+				<option value="checkbox">Dropdown</option>
+				<option value="radio">Radio</option>
+			</select>
+		</div>
+	</div>
+	<div class="control-group">
+		<label>Required</label>
+		<input type="checkbox"></input>
+	</div>
 	
 </fieldset>
