Breaking out fields into types

--- a/web/src/main/webapp/static/js/templates/screen-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-detail.hbs
@@ -9,11 +9,15 @@
 		</div>
 		<div class="pull-right">
 			<div class="btn-group">
-				<a class="btn accessible-btn add-field-button" tabindex="100" autofocus="autofocus"><i class="icon-plus"></i> Add</a> 
+				<a class="btn accessible-btn add-textbox-button" tabindex="100" autofocus="autofocus"><i class="icon-plus"></i> Add</a> 
 				<a class="btn accessible-btn dropdown-toggle" tabindex="101" data-toggle="dropdown" href="#"><span class="caret"></span></a>
 				<ul class="dropdown-menu">
 					<li><a class="accessible-btn add-section-button" tabindex="110"><i class="icon-list-alt"></i> Section</a></li>
-					<li><a class="accessible-btn add-field-button"  tabindex="111"><i class="icon-tag"></i> Field</a></li>
+					<li><a class="accessible-btn add-checkbox-button"  tabindex="111"><i class="icon-check"></i> Checkbox</a></li>
+					<li><a class="accessible-btn add-listbox-button"  tabindex="112"><i class="icon-list-alt"></i> Listbox</a></li>
+					<li><a class="accessible-btn add-radio-button"  tabindex="113"><i class="icon-ok-circle"></i> Radio button</a></li>
+					<li><a class="accessible-btn add-textbox-button"  tabindex="114"><i class="icon-italic"></i> Textbox</a></li>
+					<li><a class="accessible-btn add-textarea-button"  tabindex="115"><i class="icon-edit"></i> Text area</a></li>
 				</ul>
 			</div>
 			<div class="btn-group">
