--- a/web/src/main/webapp/static/js/templates/field-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/field-detail.hbs
@@ -1,25 +1,31 @@
-
 <fieldset>
-	<div class="control-group">
+	<div class="control-group span3">
 		<label for="field-label">Name</label>
 		<div class="controls">
-			<input type="text" class="field-label" placeholder="">
+			<input type="text" class="field-name span12" placeholder="Short name with no spaces">
 		</div>
 	</div>
-	<div class="control-group">
-		<label for="field-label">Type</label>
-		<div class="controls">
-			<select class="field-type">
-				<option value="text">Text</option>
-				<option value="checkbox">Checkbox</option>
-				<option value="checkbox">Dropdown</option>
-				<option value="radio">Radio</option>
-			</select>
-		</div>
+	<div class="control-group span1">
+		<label>Size</label>
+		<input type="text" class="field-size span12" value="255" size="3" maxlength="4"></input>
 	</div>
-	<div class="control-group">
+	<div class="control-group span1">
 		<label>Required</label>
-		<input type="checkbox"></input>
+		<input type="checkbox" class="field-required span12"></input>
 	</div>
-	
+	<div class="control-group span3">
+		<label>&nbsp;</label>
+		<div class="btn-group">
+			<a class="btn accessible-btn advanced-field-button" tabindex="200">Advanced</a> 
+			<a class="btn accessible-btn dropdown-toggle" tabindex="101" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+			<ul class="dropdown-menu">
+				<li><a class="accessible-btn add-section-button" tabindex="110"><i class="icon-list-alt"></i> Section</a></li>
+				<li><a class="accessible-btn add-checkbox-button"  tabindex="111"><i class="icon-check"></i> Checkbox</a></li>
+				<li><a class="accessible-btn add-listbox-button"  tabindex="112"><i class="icon-list-alt"></i> Listbox</a></li>
+				<li><a class="accessible-btn add-radio-button"  tabindex="113"><i class="icon-ok-circle"></i> Radio button</a></li>
+				<li><a class="accessible-btn add-textbox-button"  tabindex="114"><i class="icon-italic"></i> Textbox</a></li>
+				<li><a class="accessible-btn add-textarea-button"  tabindex="115"><i class="icon-edit"></i> Text area</a></li>
+			</ul>
+		</div>
+	</div>
 </fieldset>
