--- a/web/src/main/webapp/static/js/templates/screen-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-detail.hbs
@@ -1,11 +1,16 @@
 <div class="navbar">
 	<div class="navbar-inner">
+		<ul class="breadcrumb">
+			<li><a href="#">Processes</a> <span class="divider">/</span></li>
+			<li><a href="#designer/edit/{{ process.id }}">{{ process.shortName }}</a> <span class="divider">/</span></li>
+			<li class="active">{{ title }}</li>
+		</ul>
+	</div>
+</div>
+<div class="navbar">
+	<div class="navbar-inner nogray">
 		<div class="span6">
-			<ul class="breadcrumb">
-				<li><a href="#">Processes</a> <span class="divider">/</span></li>
-				<li><a href="#designer/edit/{{ process.id }}">{{ process.shortName }}</a> <span class="divider">/</span></li>
-				<li class="active">{{ title }}</li>
-			</ul>
+			
 		</div>
 		<div class="pull-right">
 			<div class="btn-group">
@@ -26,6 +31,7 @@
 		</div>
 	</div>
 </div>
+
 
 <div class="alert-container"></div>
 <div class="screen-content">
