--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -9,201 +9,7 @@
 
     <!-- Le styles -->
     <link href="<% static %>/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-    	a {
-			color: RoyalBlue;
-			text-decoration: none;
-		}
-		
-		a:hover {
-			text-decoration: none;
-		}
-		
-      	body {
-        	padding-top: 60px;
-        	padding-bottom: 40px;
-      	}
-      
-      	.accordion-heading .accordion-toggle [class^="icon-"], 
-      	.accordion-heading .accordion-toggle [class*=" icon-"] {
-      		vertical-align: baseline;
-      	}
-      
-      	.accordion-heading .accordion-toggle a span.lead {
-      		color: #000;
-			margin-top: 15px;
-			text-decoration: none;
-      	}
-      	
-      	.accordion-heading .accordion-toggle a:hover span.lead {
-      		color: #505050;
-	  	}
-	  	
-	  	.btn-medium {
-  			padding: 7px 15px;
-  			font-size: 14.5px;
-  			-webkit-border-radius: 4px;
-     		   -moz-border-radius: 4px;
-          		    border-radius: 4px;
-		}
-
-		.btn-medium [class^="icon-"],
-		.btn-medium [class*=" icon-"] {
-  			margin-top: 2px;
-		}
-		
-/*       	.control-group { */
-/*       		display: none; */
-/* 			margin-bottom: 5px; */
-/* 	  	} */
-	  	
-/* 	  	.control-group.hasData { */
-/* 	  		display: block; */
-/* 	  	} */
-
-		.editable {
-      		display: none !important;
-      	}
-      	
-      	.edit-button {
-      		display: none;
-      	}
-      	
-      	.editing .control-group {
-      		display: block;
-      	}
-      	
-      	.editing .editable {
-      		display: inline !important;
-      	}
-      	
-      	.editing .tips-and-tricks {
-      		display: block;
-      	}
-      	
-      	.editing .viewable {
-      		display: none !important;
-      	}
-      	
-      	.field-layout {
-			position: relative;
-			margin: 15px 0;
-			padding: 39px 19px 14px;
-			background-color: #fff;
-			border: 1px solid #ddd;
-			-webkit-border-radius: 4px;
-			-moz-border-radius: 4px;
-			border-radius: 4px;
-			min-height: 50px;
-		}
-		
-		.field-layout:after {
-			content: "Field";
-			position: absolute;
-			top: -1px;
-			left: -1px;
-			padding: 3px 7px;
-			font-size: 12px;
-			font-weight: bold;
-			background-color: #f5f5f5;
-			border: 1px solid #ddd;
-			color: #9da0a4;
-			-webkit-border-radius: 4px 0 4px 0;
-			-moz-border-radius: 4px 0 4px 0;
-			border-radius: 4px 0 4px 0;
-		}
-		
-		.field-layout.selected {
-			/*border: 1px solid black;*/
-			outline-color: RoyalBlue;
-			outline-style: auto;
-			outline-width: 5px;
-		}
-		
-		.field-layout.selected:after {
-			/*border: 1px solid black;*/
-			background-color: #eee;
-			color: black;
-		}
-      	
-      	.navbar .breadcrumb {
-      		margin: 0px;
-      		padding: 10px 0px;
-      	}
-
-		.section-layout {
-			position: relative;
-			margin: 15px 0;
-			padding: 39px 19px 14px;
-			background-color: #fff;
-			border: 1px solid #ddd;
-			-webkit-border-radius: 4px;
-			-moz-border-radius: 4px;
-			border-radius: 4px;
-			height: 300px;
-			overflow-y: auto;
-		}
-		
-		.section-layout:after {
-			content: "Section";
-			position: absolute;
-			top: -1px;
-			left: -1px;
-			padding: 3px 7px;
-			font-size: 12px;
-			font-weight: bold;
-			background-color: #f5f5f5;
-			border: 1px solid #ddd;
-			color: #9da0a4;
-			-webkit-border-radius: 4px 0 4px 0;
-			-moz-border-radius: 4px 0 4px 0;
-			border-radius: 4px 0 4px 0;
-		}
-		
-		.section-layout.selected {
-			/*border: 1px solid black;*/
-			outline-color: RoyalBlue;
-			outline-style: auto;
-			outline-width: 5px;
-		}
-		
-		.section-layout.selected:after {
-			/*border: 1px solid black;*/
-			color: black;
-		}
-		
-		.section-layout.selected.for-deletion {
-			outline-color: Red;
-			outline-style: auto;
-			outline-width: 5px;
-		}
-
-      	.sidebar-nav {
-        	padding: 9px 0;
-      	}
-      
-      	.tips-and-tricks {
-      		display: none;
-      	}
-      
-      	.tips-and-tricks button.close {
-      		margin-top: 2px;
-      	} 
-      	
-      	.viewable {
-      		margin: 7px 0px 15px;
-      		padding: 4px 4px;
-      	}
-
-      	@media (max-width: 980px) {
-        	/* Enable use of floated navbar text */
-        	.navbar-text.pull-right {
-          		float: none;
-          		padding-left: 5px;
-          		padding-right: 5px;
-        	}
-      	}
-    </style>
+    <link href="<% static %>/css/index.css" rel="stylesheet">
     <link href="<% static %>/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -217,35 +23,36 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container-fluid">
-				<button type="button" class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse">
-					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="brand" href="#"><% applicationName %></a>
-				<div class="nav-collapse collapse">
-					<p class="navbar-text pull-right">
-						<a href="#" class="navbar-link"><% user.displayName %></a>
-					</p>
-				<!-- 
-	            <ul class="nav">
-	              <li class="active"><a href="#">Home</a></li>
-	              <li><a href="#about">About</a></li>
-	              <li><a href="#contact">Contact</a></li>
-	            </ul>
-	            -->
+				<div class="row-fluid">
+					<button type="button" class="btn btn-navbar" data-toggle="collapse"
+						data-target=".nav-collapse">
+						<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<a class="brand" href="#"><% applicationName %></a>
+					<div class="nav-collapse collapse">
+						<p class="navbar-text pull-right">
+							<a href="#" class="navbar-link"><% user.displayName %></a>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<div class="container-fluid">
+		<!-- <div class="row-fluid">
+			<ul class="breadcrumb">
+				<li><a href="#">Processes</a> <span class="divider">/</span></li>
+				<li><a href="#designer/edit/{{ process.id }}">{{ process.shortName }}</a> <span class="divider">/</span></li>
+				<li class="active">{{ title }}</li>
+			</ul>
+		</div>-->
 		<div id="main-screen" class="row-fluid">
 			
 		</div>
 		<hr>
 		<footer>
-			<p></p>
+			
 		</footer>
 	</div>
 	
