--- a/web/src/main/webapp/static/js/templates/section-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/section-detail.hbs
@@ -1,4 +1,6 @@
 <div class="section-header">{{title}}</div>
-<form class="section-content">
-
+<form>
+	<ul class="section-content">
+	
+	</ul>
 </form>
