--- a/web/src/main/webapp/static/js/templates/field-textbox-layout.hbs
+++ b/web/src/main/webapp/static/js/templates/field-textbox-layout.hbs
@@ -1,28 +1,29 @@
-
-	<div class="field-layout-example">
-		<div class="control-group">
-			<label for="field-label"><input type="text" class="field-label-input unfocused empty" placeholder="Enter a label"></input></label>
-			<div class="controls">
-				<input type="text" class="field-input field-textbox">
-			</div>
+<div class="field-layout-example">
+	<div class="control-group">
+		<label for="field-label"><input type="text" class="field-label-input unfocused empty" placeholder="Enter a label"></input></label>
+		<div class="controls">
+			<input type="text" class="field-input field-textbox" name="{{name}}">
 		</div>
 	</div>
-	<div class="field-layout-details">
-		<ul class="inline form-inline">
-			<li><input type="text" class="input-medium field-label-input unfocused field-name hastooltip" placeholder="{{name}}" data-toggle="tooltip" data-original-title="Provide a name for this textbox"></li>
-			<li>
-				<select class="input-small field-label-input unfocused field-limit hastooltip" data-toggle="tooltip" data-original-title="Limit text to email, phone, etc...">
-					<option value="None">Any text</option>
-					<option value="Email">Email</option>
-					<option value="Phone">Phone</option>
-				</select>
-			</li>
-			<li><input type="text" class="input-mini field-label-input unfocused field-size hastooltip" value="255" size="3" maxlength="4" data-toggle="tooltip" data-original-title="Maximum number of characters allowed"></li>
-			<li><div class="field-center-checkbox"><input type="checkbox" class="field-required hastooltip" data-toggle="tooltip" data-original-title="Check if this should be a required field"></input>&nbsp;Required</div></li>
-			<!-- <li>
-				<div class="btn-group">
-					<button class="btn">Conditions</button>
-				</div>
-			</li>-->
-		</ul>
-	</div>
+</div>
+<div class="field-layout-details">
+	<ul class="inline form-inline">
+		<li><input type="text" class="input-medium field-label-input unfocused field-name hastooltip" placeholder="{{name}}" data-toggle="tooltip" data-original-title="Provide a name for this textbox"></li>
+		<li>
+			<select class="input-small field-label-input unfocused field-limit hastooltip" data-toggle="tooltip" data-original-title="Limit text to email, phone, etc...">
+				<option value="None">Any text</option>
+				<option value="Email">Email</option>
+				<option value="Person">Name</option>
+				<option value="Phone">Phone</option>
+			</select>
+		</li>
+		<li><input type="text" class="input-mini field-label-input unfocused field-size field-numeric hastooltip" value="255" size="3" maxlength="4" data-toggle="tooltip" data-original-title="Maximum number of characters allowed"></li>
+		<li><input type="text" class="input-mini field-label-input unfocused field-quantity field-numeric hastooltip" data-value-min="1" data-value-max="12" value="1" size="2" maxlength="2" data-toggle="tooltip" data-original-title="Number of textboxes"></li>
+		<li><div class="field-center-checkbox"><input type="checkbox" class="field-required hastooltip" data-toggle="tooltip" data-original-title="Check if this should be a required field"></input>&nbsp;Required</div></li>
+		<!-- <li>
+			<div class="btn-group">
+				<button class="btn">Conditions</button>
+			</div>
+		</li>-->
+	</ul>
+</div>
