Working on listbox edit

--- a/web/src/main/webapp/static/js/templates/field-listbox-layout.hbs
+++ b/web/src/main/webapp/static/js/templates/field-listbox-layout.hbs
@@ -1,6 +1,6 @@
 <div class="field-layout-example">
 	<div class="control-group">
-		<label for="field-label"><input type="text" class="field-label-input unfocused" placeholder="Enter a label" maxlength="100"></input></label>
+		<label for="field-label"><input type="text" class="field-label-input unfocused empty" placeholder="Enter a label" maxlength="100"></input></label>
 		<div class="controls">
 			<select class="field-input field-listbox" name="{{name}}">
 				<option></option>
