--- a/web/src/main/webapp/static/js/templates/field-textbox-layout.hbs
+++ b/web/src/main/webapp/static/js/templates/field-textbox-layout.hbs
@@ -17,7 +17,7 @@
 				<option value="Phone">Phone</option>
 			</select>
 		</li>
-		<li><input type="text" class="input-mini field-label-input unfocused field-size field-numeric hastooltip" value="255" size="3" maxlength="4" data-toggle="tooltip" data-original-title="Maximum number of characters allowed"></li>
+		<li><input type="text" class="input-mini field-label-input unfocused field-size field-numeric hastooltip" data-value-min="1" data-value-max="255" value="255" size="3" maxlength="4" data-toggle="tooltip" data-original-title="Maximum number of characters allowed"></li>
 		<li><input type="text" class="input-mini field-label-input unfocused field-quantity field-numeric hastooltip" data-value-min="1" data-value-max="12" value="1" size="2" maxlength="2" data-toggle="tooltip" data-original-title="Number of textboxes"></li>
 		<li><div class="field-center-checkbox"><input type="checkbox" class="field-required hastooltip" data-toggle="tooltip" data-original-title="Check if this should be a required field"></input>&nbsp;Required</div></li>
 		<!-- <li>
