--- a/web/src/main/webapp/static/js/templates/field-radio-layout.hbs
+++ b/web/src/main/webapp/static/js/templates/field-radio-layout.hbs
@@ -1,6 +1,6 @@
 <div class="field-layout-example">
 	<div class="control-group">
-		<label for="field-label"><input type="text" class="field-label-input unfocused" placeholder="Enter a label" maxlength="100"></input></label>
+		<label for="field-label"><input type="text" class="field-label-input unfocused empty" placeholder="Enter a label" maxlength="100"></input></label>
 		<div class="controls">
 			<input type="radio" class="field-input field-radio"  name="{{name}}"></input>&nbsp;<input type="text" class="input-small field-label-input unfocused after-checkbox" placeholder="Text" maxlength="100"></input>
 		</div>
