--- a/web/src/main/webapp/static/js/templates/process-item.hbs
+++ b/web/src/main/webapp/static/js/templates/process-item.hbs
@@ -1,1 +1,1 @@
-<div><a href="#designer/edit/{{id}}">{{shortName}}</a></div>
+<div><a href="#designer/edit/{{processDefinitionKey}}">{{processDefinitionKey}}</a></div>
