--- a/web/src/main/webapp/static/js/templates/screen-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-detail.hbs
@@ -2,7 +2,7 @@
 	<div class="navbar-inner">
 		<ul class="breadcrumb">
 			<li><a href="#">Processes</a> <span class="divider">/</span></li>
-			<li><a href="#designer/edit/{{ process.id }}">{{ process.shortName }}</a> <span class="divider">/</span></li>
+			<li><a href="#designer/edit/{{ process.id }}">{{ process.processLabel }}</a> <span class="divider">/</span></li>
 			<li class="active">{{ title }}</li>
 		</ul>
 	</div>
