--- a/web/src/main/webapp/static/js/templates/screen-item.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-item.hbs
@@ -1,4 +1,4 @@
-<div class="form-inline row-fluid">
+<div class="screen-item-content form-inline row-fluid">
 	<ul class="inline">
 		<li class="span3">
 			<div class="control-group">
@@ -9,9 +9,9 @@
 		<li class="span6">
 			<div class="control-group">
 				<label>Location</label>
-				<div class="input-append span12">
-  					<input class="span10" name="url" type="text" size="65" maxlength="200" placeholder="Cut-and-paste link here"></input>
-  					<a class="btn" href="#designer/screen/456" role="button" type="button">Configure</a>
+				<div class="input-append">
+  					<input class="span12" name="url" type="text" size="65" maxlength="200" placeholder="Cut-and-paste link here"></input>
+  					<a class="btn" href="#designer/screen/{{id}}" role="button" type="button">Configure</a>
 				</div>
 			</div>
 		</li>
