--- a/web/src/main/webapp/static/js/templates/section-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/section-detail.hbs
@@ -1,6 +1,4 @@
-<div class="section-header">{{title}}</div>
-<form>
-	<ul class="section-content">
-	
-	</ul>
+<div class="section-header"></div>
+<form class="section-content">
+
 </form>
