--- a/web/src/main/webapp/static/js/templates/field-radio-layout.hbs
+++ b/web/src/main/webapp/static/js/templates/field-radio-layout.hbs
@@ -7,6 +7,7 @@
 	</div>
 </div>
 <div class="field-layout-details">
+	<div class="pull-right drag-handle" tabindex="-1"><i class="icon-align-justify icon-white pull-right"></i></div>
 	<ul class="inline form-inline">
 		<li><input type="text" class="input-medium field-label-input unfocused field-name hastooltip" placeholder="{{name}}" data-toggle="tooltip" data-original-title="Provide a name for this textbox"></li>
 		<li>
