--- a/web/src/main/webapp/static/js/templates/process-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/process-detail.hbs
@@ -90,6 +90,34 @@
 						screen that let's the user know the data was valid, and that can provide a confirmation number. 
 					</div>
 					<div class="navbar">
+						<div class="navbar-inner nogray">
+							<div class="span6">
+								
+							</div>
+							<div class="pull-right">
+								<div class="btn-group">
+									<a class="btn accessible-btn add-screen-button" tabindex="100" autofocus="autofocus"><i class="icon-plus"></i> Add</a> 
+									<a class="btn accessible-btn dropdown-toggle" tabindex="101" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a class="accessible-btn add-interaction-button" tabindex="-1"><i class="icon-list-alt"></i> Interaction</a></li>
+										<li><a class="accessible-btn add-screen-button"  tabindex="-1"><i class="icon-check"></i> Screen</a></li>
+									</ul>
+								</div>
+								<div class="btn-group">
+									<button class="btn btn-danger accessible-btn remove-button" tabindex="102" disabled><i class="icon-remove icon-white"></i> Delete</button> 
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					
+					<div class="alert-container"></div>
+					<div class="user-interaction-content">
+						
+					</div>
+					
+					<!--  
+					<div class="navbar">
 						<div class="navbar-form">
 							<button class="btn add-screen-button pull-right" type="button" role="button">Add web page</button>
 						</div>
@@ -103,6 +131,7 @@
 							</li>
 						</ul>
 					</div>
+					-->
 				</div>
 			</div>
 		</div>
