Stubbing out interaction backend

--- a/web/src/main/webapp/static/css/index.css
+++ b/web/src/main/webapp/static/css/index.css
@@ -44,6 +44,10 @@ label input[type="text"].field-label-input.unfocused {
 	padding-left: 0px;
 }
 
+input[type="text"].field-listbox-edit {
+	display: none;
+}
+
 input[type="text"].field-numeric {
 	text-align: right;
 }
