--- a/web/src/main/webapp/static/js/templates/field-listbox-layout.hbs
+++ b/web/src/main/webapp/static/js/templates/field-listbox-layout.hbs
@@ -5,6 +5,7 @@
 			<select class="field-input field-listbox" name="{{name}}">
 				<option></option>
 			</select>
+			<input type="text" class="field-listbox-edit"></input>
 		</div>
 	</div>
 </div>
