--- a/web/src/main/webapp/static/js/templates/screen-detail.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-detail.hbs
@@ -14,7 +14,7 @@
 		</div>
 		<div class="pull-right">
 			<div class="btn-group">
-				<a class="btn accessible-btn add-checkbox-button" tabindex="100" autofocus="autofocus"><i class="icon-plus"></i> Add</a> 
+				<a class="btn accessible-btn add-listbox-button" tabindex="100" autofocus="autofocus"><i class="icon-plus"></i> Add</a> 
 				<a class="btn accessible-btn dropdown-toggle" tabindex="101" data-toggle="dropdown" href="#"><span class="caret"></span></a>
 				<ul class="dropdown-menu">
 					<li><a class="accessible-btn add-section-button" tabindex="-1"><i class="icon-list-alt"></i> Section</a></li>
