--- a/web/src/main/webapp/static/js/templates/screen-item.hbs
+++ b/web/src/main/webapp/static/js/templates/screen-item.hbs
@@ -3,14 +3,14 @@
 		<li class="span3">
 			<div class="control-group">
 				<label>Title</label>
-				<input class="span12" type="text" size="20" maxlength="100" placeholder="Screen title"></input>
+				<input class="span12" type="text" size="20" maxlength="100" placeholder="Screen title" name="title"></input>
 			</div>
 		</li>
 		<li class="span6">
 			<div class="control-group">
 				<label>Location</label>
 				<div class="input-append">
-  					<input class="span12" name="url" type="text" size="65" maxlength="200" placeholder="Cut-and-paste link here"></input>
+  					<input class="span12" name="url" type="text" size="65" maxlength="200" placeholder="Cut-and-paste link here" name="location"></input>
   					<a class="btn" href="#designer/screen/{{id}}" role="button" type="button">Configure</a>
 				</div>
 			</div>
