Minor edit on last commit

--- a/web/src/main/webapp/static/js/templates/process-designer.hbs
+++ b/web/src/main/webapp/static/js/templates/process-designer.hbs
@@ -103,7 +103,7 @@
 										</ul>
 									</div>
 									<div class="btn-group">
-										<button class="btn btn-danger accessible-btn remove-button" tabindex="102" disabled><i class="icon-remove icon-white"></i> Delete</button> 
+										<button class="btn btn-danger accessible-btn remove-button" type="button" role="button" tabindex="102" disabled><i class="icon-remove icon-white"></i> Delete</button> 
 									</div>
 								</div>
 							</div>
