Stubbing out process engine connections

--- a/web/src/main/webapp/static/js/templates/process-designer.hbs
+++ b/web/src/main/webapp/static/js/templates/process-designer.hbs
@@ -43,7 +43,7 @@
 								<div class="controls">
 									<div class="viewable process-short-name-readonly muted"></div>
 									<input class="editable process-formal-name span6" type="text"
-										name="processLabel" maxlength="80"
+										name="processDefinitionLabel" maxlength="80"
 										placeholder="How would you refer to it officially?">
 									<span class="help-inline hide">Required</span>
 								</div>
