Changing paths to distinguish app from api

--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -60,6 +60,10 @@
  	<script type="text/javascript"> 
 		piecework = {};
 		piecework.context = <%& json %>;
+
+        if (piecework.context == null) {
+            piecework.context = {};
+        }
  	</script>
 	<script data-main="<% static %>/js/index.js" src='<% static %>/js/vendor/require.js'></script>
 
