--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.instance.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.instance.template.html
@@ -64,7 +64,7 @@
 				 	</h3>
 					<%/resource.processInstanceId%>
 					<div class="form-content-placeholder">
-						<input type="hidden" name="_submissionId" value="<%resource.submissionId%>"></input>
+						<input type="hidden" name="_submissionId" value="<%resource.submissionId%>" />
 					</div>
 				</div>
 			</div>
